--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <version>6.0.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.10.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>T1_task1</finalName>
@@ -40,8 +45,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>9</source>
-          <target>9</target>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
     </plugins>
